// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test renders as expected 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 8.333333333333332,
        "borderWidth": 4.166666666666666,
        "height": 108.33333333333331,
        "justifyContent": "center",
        "width": 666.6666666666665,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 29.166666666666664,
        }
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`Button component test renders as expected 2`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 8.333333333333332,
        "borderWidth": 4.166666666666666,
        "height": 108.33333333333331,
        "justifyContent": "center",
        "width": 666.6666666666665,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 29.166666666666664,
        }
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`Button component test simulate onPress 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  onPress={[Function]}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 8.333333333333332,
        "borderWidth": 4.166666666666666,
        "height": 108.33333333333331,
        "justifyContent": "center",
        "width": 666.6666666666665,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 29.166666666666664,
        }
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`Button renders without crashing 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 8.333333333333332,
        "borderWidth": 4.166666666666666,
        "height": 108.33333333333331,
        "justifyContent": "center",
        "width": 666.6666666666665,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 29.166666666666664,
        }
      }
    />
  </View>
</View>
`;
